backend/vulnerability_analysis/testing/oob1/full/klee-out-0/test000352.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strlen.c
Line: 22
assembly.ll line: 10248
State: 9
Stack: 
	#000010248 in strlen(138493831413760) at libc/string/strlen.c:22
	#100008215 in update_employee(138868567310336, 1) at final_tc/oob1_klee.c:46
	#200008775 in __klee_posix_wrapped_main() at final_tc/oob1_klee.c:87
	#300006118 in __user_main(1, 139694811643904, 139694811643920) at src/runtime/POSIX/klee_init_env.c:245
	#400000572 in __uClibc_main(139679032672256, 1, 139694811643904, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000737 in main(1, 139694811643904)
Info: 
	address: 138493831413860
	next: object at 138449271128064 of size 4
		MO7577[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
